fix dark mode page break

--- a/src/assets/css/homeadditional.css
+++ b/src/assets/css/homeadditional.css
@@ -673,6 +673,6 @@ body:not(.dark-mode) #contact .cs-button-solid{
     background-color: #EB5B00;
 }
 
-.darkmode .cs-page-break{
+.dark-mode .cs-page-break{
     background-color: rgba(0, 0, 0, 0.2);
 }
